--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -161,7 +161,7 @@
                                    
               <li class="dropdown">
 	            <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three Column <b class="caret"></b></a> -->
-	            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                           Câmeras ao vivo<b class="caret"></b>
                                         </a>
 	            <ul class="dropdown-menu multi-column columns-2">
@@ -197,7 +197,7 @@
 
 
                                     <li class="dropdown">
-                                        <a href="javscript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                           Serviços <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu">
