--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -156,26 +156,21 @@
                                           <li><a href="#cameras" class="scrollto" onclick="$('#slide3').click();">Beira Mar Norte</a></li>
                                           </ul>
                                       </li> -->
-                                      
-                                   
                                    
               <li class="dropdown">
 	            <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three Column <b class="caret"></b></a> -->
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" id="menusup">
                                           Câmeras ao vivo<b class="caret"></b>
                                         </a>
 	            <ul class="dropdown-menu multi-column columns-2">
-		            <div class="row">
-			            <div class="col-sm-6">
+
+ 						<div class="col-sm-6">
 				            <ul class="multi-column-dropdown">
 								<li><a href="#cameras" class="scrollto" onclick="$('#slide1').click();">Ponte Hercílio Luz</a></li> 
                                 <li><a href="#cameras" class="scrollto" onclick="$('#slide2').click();">Kioske</a></li> 
                                 <li><a href="#cameras" class="scrollto" onclick="$('#slide3').click();">Beira Mar Norte</a></li>
                                 <li><a href="#cameras" class="scrollto" onclick="$('#slide4').click();">Catedral</a></li>
                                 <li><a href="#cameras" class="scrollto" onclick="$('#slide6').click();">Koxixos</a></li>
-                                          
-<!-- 					            <li class="divider"></li>
- -->
  					            <li><a href="#cameras" class="scrollto" onclick="$('#slide5').click();">Coqueiros</a></li> 
 
 				            </ul>
@@ -197,7 +192,7 @@
 
 
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="menusup2">
                                           Serviços <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu">
@@ -389,11 +384,12 @@
 <div class="cameras-wrapper">
 
 <div class="cameras">
+
     <div>
     <div class="camera">
-		<a href="#x" id="slide1">
+		<a href="#cameras" id="slide1">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Hercílio Luz</div>
 		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -404,9 +400,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide2">
+		<a href="#cameras" id="slide2">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Kioske</div>
 		<img src='{% static "assets/images/thumb_kioske.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -417,9 +413,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide3">
+		<a href="#cameras" id="slide3">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Beira Mar</div>
 		<img src='{% static "assets/images/thumb_beira_mar.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -430,9 +426,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide4">
+		<a href="#cameras" id="slide4">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Catedral</div>
 		<img src='{% static "assets/images/thumb_catedral.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -443,9 +439,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide5">
+		<a href="#cameras" id="slide5">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Coqueiros</div>
 		<img src='{% static "assets/images/thumb_coqueiros.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -457,9 +453,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide6">
+		<a href="#cameras" id="slide6">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Koxixos</div>
 		<img src='{% static "assets/images/thumb_koxixos.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -470,9 +466,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide7">
+		<a href="#cameras" id="slide7">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Mirante Lagoa</div>
 		<img src='{% static "assets/images/thumb_mirante.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -483,9 +479,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide8">
+		<a href="#cameras" id="slide8">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Ponte Lagoa</div>
 		<img src='{% static "assets/images/thumb_ponte_lagoa.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -496,9 +492,9 @@
     <div>
     <div class="camera">
 
-		<a href="#x" id="slide9">
+		<a href="#cameras" id="slide9">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Santo Antônio</div>
 		<img src='{% static "assets/images/thumb_sto_antonio.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -511,7 +507,7 @@
 
 		<a href="#x" id="slide10">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Kite</div>
 		<img src='{% static "assets/images/thumb_kite.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -522,9 +518,9 @@
 	<div>
     <div class="camera">
 
-		<a href="#x" id="slide11">
+		<a href="#cameras" id="slide11">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn animated" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: 35%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Joaquina</div>
 		<img src='{% static "assets/images/thumb_joaquina.jpg"%}' class="camera" width="127" height="79" alt=""/>
@@ -533,6 +529,8 @@
 	</div>
     
 </div>
+
+    <br>  
 </div>
     
     
@@ -540,6 +538,7 @@
     </div>
 
     <div class="col-lg-4 corps">
+
                       <img src="{% static 'assets/images/flyer_small.jpg'%}" alt="" class="img-responsive">
 
                   <div id="propaganda_slide" style="margin-top: 20px; margin-left: 50px;">
@@ -631,9 +630,11 @@
                               <a href="#canvas-bg" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Experiente já!</a>
                           </div>
                         </div> -->
-                        <div class="col-md-12" style="text-align: center;">
+                        <div class='col-sm-2'></div>
+                        <div class="col-md-8" style="text-align: center;">
+                        
                           <br>
-                          <div class="embed-responsive embed-responsive-16by9">
+                          <div class="embed-responsive embed-responsive-16by9 venobox">
                           	<iframe width="640" height="360" src="https://www.youtube.com/embed/SZEflIVnhH8"></iframe>
                           </div>
                           <br>
@@ -646,6 +647,7 @@
                             </div>
                             
                         </div>
+                        <div class='col-sm-2'></div>
 
 
 
@@ -809,15 +811,16 @@
                             </div><!-- /End Tab-content -->
 
 
-                            <div class="tab-content" id="tab-feature-4" style="height: 400px;">
+                            <div class="tab-content" id="tab-feature-4" style="height: 300px;">
                                 <div class="container">
                                     <div class="row">
                                         <!-- Feature Description 2cols Text-Left with Buttons -->
                                         <div class="col-md-5 col-sm-6">
 
                                           <h4>Atendimento</h4>
-                                          <p>A MaaxCam preza pela satisfação dos clientes e busca atendê-los prontamente.</p>
-                                          <div class="tab-icon">
+<!--                                           <p>A MaaxCam preza pela satisfação dos clientes e busca atendê-los prontamente.</p>
+ -->                                          
+ 											<div class="tab-icon">
                                               <!-- <div class="icon-sm">
                                                   <i class="icon icon-phone"></i>
                                               </div> -->
@@ -893,7 +896,7 @@
                                       </div>
                                       <!-- Image Right -->
                                       <div class="col-md-5 col-sm-6 hidden-xs wow fadeInRight" data-wow-duration="2s">
-                                          <img width="425" src="{% static 'assets/images/colaborativo3.jpg'%}" class="img-responsive" alt="">
+                                          <img width="425" src="{% static 'assets/images/colaborativo4.jpg'%}" class="img-responsive" alt="">
                                       </div>
                                   </div>
                               </div>
@@ -1000,26 +1003,26 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
                         </div>
                     </div>
-				<div class="row">
-                    <div class="col-sm-3 team-box">
+				<div class="row row-centered">
+                    <div class="col-sm-3 col-centered team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/bebe_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
                         <h4 style="text-align: center;">Seu bebê</h4>
                     </div>
-                    <div class="col-sm-3 team-box">
+                    <div class="col-sm-3 col-centered team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/casa_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
                         <h4 style="text-align: center;">Sua casa</h4>
                     </div>
-                    <div class="col-sm-3 team-box">
+                    <div class="col-sm-3 col-centered team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/escritorio_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
                         <h4 style="text-align: center;">Sua empresa</h4>
                     </div>
-                    <div class="col-sm-3 team-box">
+                    <div class="col-sm-3 col-centered team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/casa_ferias_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
@@ -1374,12 +1377,13 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                         
                         
                            <div class="form-group">
-                             <label for="select" class="col-sm-2 control-label">Interesse</label>
+                             <label for="select" class="col-sm-2 control-label">Interesse*</label>
 
                               <div class="col-sm-8">
                                   <!-- <input type="selectbox" class="form-control" id="input" placeholder="Insira seu nome completo"> -->
                                   <select name="input_categoria" id="input_categoria" class="form-control">
-                                   <option value="1" selected>Monitore sua rua</option>
+                                   <option value="0" selected>Selecione seu interesse</option>
+                                   <option value="1">Monitore sua rua</option>
                                    <option value="2">Monitore sua camera ip</option>
                                    <option value="3">Divulgue</option>
                                    <option value="4">Parceiros</option>
@@ -1387,13 +1391,13 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                               </div>
                            </div>
                             <div class="form-group">
-                                <label for="inputType" class="col-sm-2 control-label">Nome</label>
+                                <label for="inputType" class="col-sm-2 control-label">Nome*</label>
                                 <div class="col-sm-8">
                                     <input type="text" class="form-control" id="input_nome" name="input_nome" placeholder="Insira seu nome completo">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputType" class="col-sm-2 control-label">E-mail</label>
+                                <label for="inputType" class="col-sm-2 control-label">E-mail*</label>
                                 <div class="col-sm-8">
                                     <input type="text" class="form-control" id="input_email" name="input_email" placeholder="Insira seu email">
                                 </div>
