--- a/maaxcam/templates/account/index.html
+++ b/maaxcam/templates/account/index.html
@@ -4,65 +4,74 @@
 
 {% load table_tags %}
 
-{% block body_class %}account account-settings{% endblock %}
+{% block body_class %}Restrito{% endblock %}
 
-{% block head_title %}Restrito{% endblock %}
+{% block head_title %}Área Cliente{% endblock %}
 
 
 {% block body %}
     <div class="row">
         <div class="col-md-12">
          
-            <h1>Olá {{request.user.username.title}}</h1>
-                            <div class="box box-solid">
-                                <div class="box-header">
-                                    <h3 class="box-title">Cadastro</h3>
-                                </div><!-- /.box-header -->
-                                <div class="box-body">
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{progresso}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progresso}}%">
-                                            <span class="sr-only">{{progresso}}% Completo</span>
-                                        </div>
-                                    </div>
-{{progresso}}% Completo<button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#modal_pendencias">Ver pendências</button>
-                                </div><!-- /.box-body -->
-                            </div><!-- /.box -->
-                            
-                            
-                            
-                            
+            <h1>Olá {{cliente.nome}}</h1> <!-- {{request.user.username.title}} -->
             
-            {% for a in assinaturas %}
             
-                     <div class="row">
-                        <div class="col-xs-12">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3 class="box-title">Assinatura {{ a.id }}</h3>
-                                    
-                                    Seu plano é {{ a.plano.nome }}
-                                    <!-- <a href="/gerencial/planos">Detalhes</a> -->
-                                    <a href="#demo" data-toggle="collapse">Detalhes</a>
+                          <!-- {% include "_messages.html" %} -->
+            
+            
 
+<br>                            
+                            
+<div class="panel panel-info">
+<div class="panel-heading">Cadastro</div>
+  
+  <div class="panel-body">
+   
+   
+<div class="progress">
+  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{progresso}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{progresso}}%;">
+    {{progresso}}%
+  </div>
+</div>
+
+  <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#modal_pendencias">Ver pendências</button>
+
+
+  
+  </div>
+</div>
+                            
+{% for a in assinaturas %}
+<div class="panel panel-info">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Faturas</div> <!-- Assinatura {{ a.id }} -->
+  <div class="panel-body">
+    <p>
+    
+    Seu plano é {{ a.plano.nome }}
+                                    <!-- <a href="/gerencial/planos">Detalhes</a> -->
+                                    <a href="#demo" class="btn btn-info btn-xs" data-toggle="collapse">Detalhes</a>
+<!--                                     <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#modal_pendencias">Ver pendências</button>
+ -->
 									<div id="demo" class="collapse">
 									{{ a.plano.descricao }}
 									</div>
-                                    
-                                   <!--  <div class="box-tools">
-                                        <div class="input-group">
-                                            <input type="text" name="table_search" class="form-control input-sm pull-right" style="width: 150px;" placeholder="Search"/>
-                                            <div class="input-group-btn">
-                                                <button class="btn btn-sm btn-default"><i class="fa fa-search"></i></button>
-                                            </div>
-                                        </div>
-                                    </div> -->
-                                </div><!-- /.box-header -->
-                                <div class="box-body table-responsive no-padding">
+    
+    </p>
+  </div>
+
+  <!-- Table -->
+  <table class="table">
+    
+    
+    
+                                    <div class="box-body table-responsive no-padding">
                                     <table class="table table-hover">
                                         <tr>
                                             <th>ID</th>
                                             <th>Mes</th>
                                             <th>Vencimento</th>
+                                            <th>Valor</th>
                                             <th>Status</th>
                                             <th>Obs</th>
                                         </tr>
@@ -71,6 +80,7 @@
                                             <td>{{f.id}}</td>
                                             <td>{{f.mes}}</td>
                                             <td>{{f.data_vencimento}}</td>
+                                            <td>{{f.valor}}</td>
                                             <td>
                                             {%if f.status %}
                                             	<span class="label label-success">Pago</span></td>
@@ -85,15 +95,14 @@
                                         {% endfor %}
                                     </table>
                                 </div><!-- /.box-body -->
-                            </div><!-- /.box -->
-                        </div>
-                    </div>
-            	
-            {% endfor %}
-        </div>
-    </div>
     
-    
+
+  </table>
+</div>
+
+    {% endfor %}
+
+  
     <!-- Modal -->
 <div id="modal_pendencias" class="modal fade" role="dialog">
   <div class="modal-dialog">
